Add boilerplate phaser

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
 
-  <script src="index.js" async defer></script>
+  <script src="node_modules/phaser/dist/phaser.min.js"></script>
+
+  <script src="index.js"></script>
 
 </head>
 
