Use Raleway for the font

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>GGJ 16</title>
 
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="styles/fonts.css">
 
   <script src="node_modules/phaser/dist/phaser.min.js"></script>
 
