Get rid of more references to GGJ

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
 
-  <title>GGJ 16</title>
+  <title>To The End</title>
 
   <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" type="text/css" href="styles/fonts.css">
